@@ -1,5 +1,8 @@
 2021-03-05  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/dependency/Resolver.java:
+	Refactored WorkspaceReader implementation to an inner class.
+
 	* src/main/java/ganymede/notebook/Notebook.java:
 	Created Notebook @SpringBootApplication to initialize JShell.
 
